Fix styling issue for acts on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -21,6 +21,10 @@
   display: flex;
   justify-content: center;
 
+  @include media-query($on-palm) {
+    display: block;
+  }
+
   .act {
     position: relative;
     cursor: pointer;
@@ -66,6 +70,7 @@
         padding-bottom: 100px;
         color: white;
         overflow-y: scroll;
+        z-index: 99;
 
         .act-contentClose {
           padding: 1em 2em;
